--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app-new",
+  "name": "community-posts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,12 +8,15 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.3",
+    "sass": "^1.83.4",
     "typescript": "^4.4.2",
+    "uuid": "^11.0.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
